feat: implement contact management features including groups, import/export, and enhanced UI
- Added ContactGroups component for managing contact groups with create, update, and delete functionalities.
- Introduced ContactImportExport component for importing and exporting contacts in vCard format.
- Developed ContactsList component to display and manage contacts with search functionality.
- Created GroupMembers component to manage members of a contact group.
- Implemented vCard utility functions for handling contact data in vCard format.
- Enhanced contacts store with state management for contacts and groups, including CRUD operations.

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -8,6 +8,7 @@
     "sign_in": "Sign in",
     "signing_in": "Signing in...",
     "loading": "Loading...",
+    "remove_from_history": "Remove from history",
     "error": {
       "invalid_credentials": "Invalid email or password",
       "connection_failed": "Failed to connect to the server",
@@ -17,8 +18,7 @@
       "title": "Configuration Error",
       "fetch_failed": "Unable to load application configuration. Please try again later.",
       "server_not_configured": "The mail server has not been configured. Please contact your administrator."
-    },
-    "remove_from_history": "Remove from history"
+    }
   },
   "sidebar": {
     "close": "Close",
@@ -218,8 +218,11 @@
     "delete": "Delete",
     "edit": "Edit",
     "close": "Close",
+    "back": "Back",
     "search": "Search",
     "refresh": "Refresh",
+    "dismiss": "Dismiss",
+    "remove_from_history": "Remove from history",
     "settings": "Settings",
     "help": "Help",
     "logout": "Logout",
@@ -577,5 +580,67 @@
     "delete": "Delete conversation",
     "star": "Star conversation",
     "unstar": "Unstar conversation"
+  },
+  "contacts": {
+    "title": "Contacts",
+    "new_contact": "New Contact",
+    "edit_contact": "Edit Contact",
+    "select_contact": "Select a Contact",
+    "select_or_create": "Choose a contact from the list or create a new one",
+    "search_placeholder": "Search contacts...",
+    "no_contacts": "No contacts yet",
+    "no_results": "No contacts match your search",
+    "loading": "Loading contacts...",
+    "full_name": "Full Name",
+    "full_name_placeholder": "Enter full name",
+    "first_name": "First Name",
+    "last_name": "Last Name",
+    "organization": "Organization",
+    "job_title": "Job Title",
+    "emails": "Email Addresses",
+    "email": "Email",
+    "phones": "Phone Numbers",
+    "phone": "Phone",
+    "notes": "Notes",
+    "add": "Add",
+    "save": "Save",
+    "saving": "Saving...",
+    "cancel": "Cancel",
+    "delete": "Delete",
+    "confirm_delete": "Are you sure you want to delete this contact?",
+    "type_home": "Home",
+    "type_work": "Work",
+    "type_mobile": "Mobile",
+    "type_fax": "Fax",
+    "type_other": "Other",
+    "contact_added": "Contact added successfully",
+    "contact_updated": "Contact updated successfully",
+    "contact_deleted": "Contact deleted successfully",
+    "error_adding": "Failed to add contact",
+    "error_updating": "Failed to update contact",
+    "error_deleting": "Failed to delete contact",
+    "export": "Export",
+    "import": "Import",
+    "importing": "Importing...",
+    "no_contacts_to_export": "No contacts to export",
+    "invalid_file_type": "Invalid file type. Please select a .vcf file.",
+    "no_contacts_found": "No contacts found in the file.",
+    "client_not_ready": "Client is not ready. Please try again.",
+    "import_failed": "Failed to import any contacts.",
+    "import_error": "An error occurred during import.",
+    "imported_count": "Successfully imported {{count}} contact(s)",
+    "groups": "Groups",
+    "create_group": "Create Group",
+    "group_name_placeholder": "Group name",
+    "confirm_delete_group": "Delete this group?",
+    "no_members": "No members",
+    "members_count": "{{count}} member(s)",
+    "manage_members": "Manage Members",
+    "current_members": "Current Members",
+    "add_members": "Add Members",
+    "search_contacts": "Search contacts...",
+    "remove_from_group": "Remove",
+    "all_contacts_in_group": "All contacts in this group",
+    "viewing_group": "Viewing"
   }
 }
