--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -7,8 +7,7 @@
     "password_placeholder": "Entrez votre mot de passe",
     "sign_in": "Se connecter",
     "signing_in": "Connexion en cours...",
-    "loading": "Chargement...",
-    "error": {
+    "loading": "Chargement...",    "remove_from_history": "Supprimer de l'historique",    "error": {
       "invalid_credentials": "Email ou mot de passe invalide",
       "connection_failed": "Échec de la connexion au serveur",
       "generic": "Une erreur s'est produite. Veuillez réessayer."
@@ -17,8 +16,7 @@
       "title": "Erreur de configuration",
       "fetch_failed": "Impossible de charger la configuration de l'application. Veuillez réessayer plus tard.",
       "server_not_configured": "Le serveur de messagerie n'a pas été configuré. Veuillez contacter votre administrateur."
-    },
-    "remove_from_history": "Supprimer de l'historique"
+    }
   },
   "sidebar": {
     "close": "Fermer",
@@ -218,12 +216,15 @@
     "delete": "Supprimer",
     "edit": "Modifier",
     "close": "Fermer",
+    "back": "Retour",
     "search": "Rechercher",
     "refresh": "Actualiser",
     "settings": "Paramètres",
     "help": "Aide",
     "logout": "Déconnexion",
     "yes": "Oui",
+    "dismiss": "Fermer",
+    "remove_from_history": "Supprimer de l'historique",
     "no": "Non",
     "unknown": "Inconnu",
     "app_title": "Webmail"
@@ -577,5 +578,67 @@
     "delete": "Supprimer la conversation",
     "star": "Marquer la conversation comme favorite",
     "unstar": "Retirer des favoris"
+  },
+  "contacts": {
+    "title": "Contacts",
+    "new_contact": "Nouveau Contact",
+    "edit_contact": "Modifier le Contact",
+    "select_contact": "Sélectionnez un Contact",
+    "select_or_create": "Choisissez un contact dans la liste ou créez-en un nouveau",
+    "search_placeholder": "Rechercher des contacts...",
+    "no_contacts": "Aucun contact pour le moment",
+    "no_results": "Aucun contact ne correspond à votre recherche",
+    "loading": "Chargement des contacts...",
+    "full_name": "Nom Complet",
+    "full_name_placeholder": "Entrez le nom complet",
+    "first_name": "Prénom",
+    "last_name": "Nom",
+    "organization": "Organisation",
+    "job_title": "Titre du Poste",
+    "emails": "Adresses Email",
+    "email": "Email",
+    "phones": "Numéros de Téléphone",
+    "phone": "Téléphone",
+    "notes": "Notes",
+    "add": "Ajouter",
+    "save": "Enregistrer",
+    "saving": "Enregistrement...",
+    "cancel": "Annuler",
+    "delete": "Supprimer",
+    "confirm_delete": "Êtes-vous sûr de vouloir supprimer ce contact?",
+    "type_home": "Domicile",
+    "type_work": "Professionnel",
+    "type_mobile": "Mobile",
+    "type_fax": "Fax",
+    "type_other": "Autre",
+    "contact_added": "Contact ajouté avec succès",
+    "contact_updated": "Contact mis à jour avec succès",
+    "contact_deleted": "Contact supprimé avec succès",
+    "error_adding": "Erreur lors de l'ajout du contact",
+    "error_updating": "Erreur lors de la mise à jour du contact",
+    "error_deleting": "Erreur lors de la suppression du contact",
+    "export": "Exporter",
+    "import": "Importer",
+    "importing": "Importation...",
+    "no_contacts_to_export": "Aucun contact à exporter",
+    "invalid_file_type": "Type de fichier invalide. Veuillez sélectionner un fichier .vcf.",
+    "no_contacts_found": "Aucun contact trouvé dans le fichier.",
+    "client_not_ready": "Le client n'est pas prêt. Veuillez réessayer.",
+    "import_failed": "Échec de l'importation d'un contact.",
+    "import_error": "Une erreur s'est produite lors de l'importation.",
+    "imported_count": "{{count}} contact(s) importé(s) avec succès",
+    "groups": "Groupes",
+    "create_group": "Créer un Groupe",
+    "group_name_placeholder": "Nom du groupe",
+    "confirm_delete_group": "Supprimer ce groupe?",
+    "no_members": "Aucun membre",
+    "members_count": "{{count}} membre(s)",
+    "manage_members": "Gérer les Membres",
+    "current_members": "Membres Actuels",
+    "add_members": "Ajouter des Membres",
+    "search_contacts": "Rechercher des contacts...",
+    "remove_from_group": "Supprimer",
+    "all_contacts_in_group": "Tous les contacts de ce groupe",
+    "viewing_group": "Affichage"
   }
 }
