fix: wrap case blocks with braces to fix ESLint lexical declaration errors

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -38,6 +38,9 @@
     "language": {
       "title": "Language"
     },
+    "calendar": {
+      "title": "Calendar"
+    },
     "mailboxes": {
       "inbox": "Inbox",
       "sent": "Sent",
@@ -200,6 +203,11 @@
     "bcc_label": "Bcc:",
     "subject_label": "Subject:",
     "file_size_kb": "KB",
+    "template": "Template",
+    "no_templates": "No templates",
+    "fill_template_variables": "Fill in Template Variables",
+    "fill_template_variables_description": "Enter values for the template variables below",
+    "insert_template": "Insert Template",
     "quote": {
       "reply_header": "On {{date}}, {{sender}} wrote:",
       "forward_header": "---------- Forwarded message ----------",
@@ -283,6 +291,8 @@
       "appearance": "Appearance",
       "language": "Language & Region",
       "email": "Email Behavior",
+      "filters": "Email Filters",
+      "templates": "Templates",
       "composer": "Composer",
       "privacy": "Privacy & Security",
       "account": "Account",
@@ -471,6 +481,80 @@
         "value": "{{time}}"
       }
     },
+    "email_filters": {
+      "title": "Email Filters",
+      "description": "Create and manage automatic email filtering rules",
+      "total_rules": "Total Rules",
+      "enabled_rules": "Enabled Rules",
+      "new_filter": "Create New Filter",
+      "filter_name_placeholder": "Filter name (e.g., \"Newsletter emails\")",
+      "filter_description_placeholder": "Optional description",
+      "create_filter": "Create Filter",
+      "no_filters": "No filters yet. Create one to get started.",
+      "conditions": "Conditions",
+      "actions": "Actions",
+      "no_conditions": "No conditions added yet",
+      "no_actions": "No actions added yet",
+      "add_condition": "Add Condition",
+      "add_action": "Add Action",
+      "match_all_conditions": "Match ALL conditions",
+      "match_any_condition": "Match ANY condition",
+      "duplicate_filter": "Duplicate this filter",
+      "delete_filter": "Delete this filter",
+      "condition_types": {
+        "from": "From",
+        "to": "To",
+        "subject": "Subject",
+        "body": "Body",
+        "has_attachment": "Has Attachment"
+      },
+      "operators": {
+        "contains": "contains",
+        "equals": "equals",
+        "starts_with": "starts with",
+        "ends_with": "ends with"
+      },
+      "action_types": {
+        "mark_as_read": "Mark as Read",
+        "mark_as_spam": "Mark as Spam",
+        "mark_as_important": "Mark as Important",
+        "add_label": "Add Label",
+        "move_to_mailbox": "Move to Folder",
+        "delete": "Delete"
+      }
+    },
+    "email_templates": {
+      "title": "Email Templates",
+      "description": "Create and manage email templates for quick composition",
+      "total_templates": "Total Templates",
+      "signatures": "Signatures",
+      "categories": "Categories",
+      "search_placeholder": "Search templates...",
+      "new_template": "Create New Template",
+      "template_name_placeholder": "Template name (e.g., \"Support Response\")",
+      "template_category_placeholder": "Category (optional, e.g., \"Support\", \"Sales\")",
+      "template_description_placeholder": "Description (optional)",
+      "is_signature": "Mark as signature",
+      "subject_placeholder": "Email subject",
+      "body_placeholder": "Email body",
+      "insert_variable": "Insert Variable",
+      "create_template": "Create Template",
+      "no_templates": "No templates yet. Create one to get started.",
+      "duplicate_template": "Duplicate this template",
+      "delete_template": "Delete this template",
+      "description": "Description",
+      "subject": "Subject",
+      "body": "Body",
+      "variables": "Variables Used",
+      "signature": "Signature",
+      "variable_recipient_name": "Recipient Name",
+      "variable_recipient_email": "Recipient Email",
+      "variable_sender_name": "Sender Name",
+      "variable_current_date": "Current Date",
+      "variable_current_time": "Current Time",
+      "variable_company_name": "Company Name",
+      "variable_signature": "Signature Block"
+    },
     "advanced": {
       "title": "Advanced",
       "description": "Advanced options and developer settings",
@@ -641,6 +725,62 @@
     "search_contacts": "Search contacts...",
     "remove_from_group": "Remove",
     "all_contacts_in_group": "All contacts in this group",
-    "viewing_group": "Viewing"
+    "viewing_group": "Viewing",
+    "sync_contacts": "Sync contacts",
+    "last_synced": "Last synced",
+    "syncing": "Syncing..."
+  },
+  "calendar": {
+    "title": "Calendar",
+    "new_event": "New Event",
+    "create_event": "Create Event",
+    "edit_event": "Edit Event",
+    "delete_event": "Delete Event",
+    "event_title_placeholder": "Event title",
+    "event_description_placeholder": "Description (optional)",
+    "event_location_placeholder": "Location (optional)",
+    "start_time": "Start time",
+    "end_time": "End time",
+    "all_day": "All day",
+    "calendar": "Calendar",
+    "my_calendars": "My Calendars",
+    "other_calendars": "Other Calendars",
+    "select_calendar": "Select a calendar",
+    "no_calendars": "No calendars available",
+    "not_supported": "Server does not support calendars",
+    "sync": "Sync calendars",
+    "syncing": "Syncing calendars...",
+    "today": "Today",
+    "month_view": "Month",
+    "week_view": "Week",
+    "day_view": "Day",
+    "new_calendar": "New Calendar",
+    "calendar_name": "Calendar name",
+    "calendar_description": "Calendar description",
+    "calendar_color": "Calendar color",
+    "event_saved": "Event saved",
+    "event_deleted": "Event deleted",
+    "event_updated": "Event updated",
+    "error_saving": "Failed to save event",
+    "error_deleting": "Failed to delete event",
+    "error_updating": "Failed to update event",
+    "participants": "Participants",
+    "organizer": "Organizer",
+    "add_participant": "Add participant",
+    "recurrence": "Recurrence",
+    "no_recurrence": "Does not repeat",
+    "daily": "Daily",
+    "weekly": "Weekly",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "reminder": "Reminder",
+    "none": "None",
+    "15_minutes": "15 minutes before",
+    "30_minutes": "30 minutes before",
+    "1_hour": "1 hour before",
+    "1_day": "1 day before",
+    "private": "Private",
+    "busy": "Mark as busy",
+    "free": "Mark as free"
   }
 }
