--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -36,6 +36,9 @@
     "language": {
       "title": "Langue"
     },
+    "calendar": {
+      "title": "Calendrier"
+    },
     "mailboxes": {
       "inbox": "Boîte de réception",
       "sent": "Envoyés",
@@ -198,6 +201,11 @@
     "bcc_label": "Cci :",
     "subject_label": "Objet :",
     "file_size_kb": "Ko",
+    "template": "Modèle",
+    "no_templates": "Aucun modèle",
+    "fill_template_variables": "Remplissez les variables du modèle",
+    "fill_template_variables_description": "Entrez les valeurs pour les variables du modèle ci-dessous",
+    "insert_template": "Insérer le modèle",
     "quote": {
       "reply_header": "Le {{date}}, {{sender}} a écrit :",
       "forward_header": "---------- Message transféré ----------",
@@ -281,6 +289,8 @@
       "appearance": "Apparence",
       "language": "Langue et région",
       "email": "Comportement email",
+      "filters": "Filtres d'email",
+      "templates": "Modèles",
       "composer": "Compositeur",
       "privacy": "Confidentialité et sécurité",
       "account": "Compte",
@@ -469,6 +479,80 @@
         "value": "{{time}}"
       }
     },
+    "email_filters": {
+      "title": "Filtres d'email",
+      "description": "Créez et gérez des règles de filtrage automatique des emails",
+      "total_rules": "Règles totales",
+      "enabled_rules": "Règles activées",
+      "new_filter": "Créer un nouveau filtre",
+      "filter_name_placeholder": "Nom du filtre (par ex. \"Emails des newsletters\")",
+      "filter_description_placeholder": "Description facultative",
+      "create_filter": "Créer un filtre",
+      "no_filters": "Aucun filtre pour le moment. Créez-en un pour commencer.",
+      "conditions": "Conditions",
+      "actions": "Actions",
+      "no_conditions": "Aucune condition ajoutée",
+      "no_actions": "Aucune action ajoutée",
+      "add_condition": "Ajouter une condition",
+      "add_action": "Ajouter une action",
+      "match_all_conditions": "Correspondre TOUTES les conditions",
+      "match_any_condition": "Correspondre TOUTE condition",
+      "duplicate_filter": "Dupliquer ce filtre",
+      "delete_filter": "Supprimer ce filtre",
+      "condition_types": {
+        "from": "De",
+        "to": "À",
+        "subject": "Sujet",
+        "body": "Corps",
+        "has_attachment": "Pièce jointe"
+      },
+      "operators": {
+        "contains": "contient",
+        "equals": "égal à",
+        "starts_with": "commence par",
+        "ends_with": "se termine par"
+      },
+      "action_types": {
+        "mark_as_read": "Marquer comme lu",
+        "mark_as_spam": "Marquer comme spam",
+        "mark_as_important": "Marquer comme important",
+        "add_label": "Ajouter une étiquette",
+        "move_to_mailbox": "Déplacer vers le dossier",
+        "delete": "Supprimer"
+      }
+    },
+    "email_templates": {
+      "title": "Modèles d'email",
+      "description": "Créez et gérez des modèles d'email pour une composition rapide",
+      "total_templates": "Modèles totaux",
+      "signatures": "Signatures",
+      "categories": "Catégories",
+      "search_placeholder": "Rechercher des modèles...",
+      "new_template": "Créer un nouveau modèle",
+      "template_name_placeholder": "Nom du modèle (par ex. \"Réponse support\")",
+      "template_category_placeholder": "Catégorie (facultative, par ex. \"Support\", \"Ventes\")",
+      "template_description_placeholder": "Description (facultative)",
+      "is_signature": "Marquer comme signature",
+      "subject_placeholder": "Sujet de l'email",
+      "body_placeholder": "Corps de l'email",
+      "insert_variable": "Insérer une variable",
+      "create_template": "Créer un modèle",
+      "no_templates": "Aucun modèle pour le moment. Créez-en un pour commencer.",
+      "duplicate_template": "Dupliquer ce modèle",
+      "delete_template": "Supprimer ce modèle",
+      "description": "Description",
+      "subject": "Sujet",
+      "body": "Corps",
+      "variables": "Variables utilisées",
+      "signature": "Signature",
+      "variable_recipient_name": "Nom du destinataire",
+      "variable_recipient_email": "Email du destinataire",
+      "variable_sender_name": "Nom de l'expéditeur",
+      "variable_current_date": "Date actuelle",
+      "variable_current_time": "Heure actuelle",
+      "variable_company_name": "Nom de l'entreprise",
+      "variable_signature": "Bloc de signature"
+    },
     "advanced": {
       "title": "Avancé",
       "description": "Options avancées et paramètres développeur",
@@ -639,6 +723,62 @@
     "search_contacts": "Rechercher des contacts...",
     "remove_from_group": "Supprimer",
     "all_contacts_in_group": "Tous les contacts de ce groupe",
-    "viewing_group": "Affichage"
+    "viewing_group": "Affichage",
+    "sync_contacts": "Synchroniser les contacts",
+    "last_synced": "Dernière synchronisation",
+    "syncing": "Synchronisation..."
+  },
+  "calendar": {
+    "title": "Calendrier",
+    "new_event": "Nouvel événement",
+    "create_event": "Créer un événement",
+    "edit_event": "Modifier l'événement",
+    "delete_event": "Supprimer l'événement",
+    "event_title_placeholder": "Titre de l'événement",
+    "event_description_placeholder": "Description (facultatif)",
+    "event_location_placeholder": "Lieu (facultatif)",
+    "start_time": "Heure de début",
+    "end_time": "Heure de fin",
+    "all_day": "Toute la journée",
+    "calendar": "Calendrier",
+    "my_calendars": "Mes calendriers",
+    "other_calendars": "Autres calendriers",
+    "select_calendar": "Sélectionner un calendrier",
+    "no_calendars": "Aucun calendrier disponible",
+    "not_supported": "Le serveur ne supporte pas les calendriers",
+    "sync": "Synchroniser les calendriers",
+    "syncing": "Synchronisation des calendriers...",
+    "today": "Aujourd'hui",
+    "month_view": "Mois",
+    "week_view": "Semaine",
+    "day_view": "Jour",
+    "new_calendar": "Nouveau calendrier",
+    "calendar_name": "Nom du calendrier",
+    "calendar_description": "Description du calendrier",
+    "calendar_color": "Couleur du calendrier",
+    "event_saved": "Événement enregistré",
+    "event_deleted": "Événement supprimé",
+    "event_updated": "Événement mis à jour",
+    "error_saving": "Échec de l'enregistrement de l'événement",
+    "error_deleting": "Échec de la suppression de l'événement",
+    "error_updating": "Échec de la mise à jour de l'événement",
+    "participants": "Participants",
+    "organizer": "Organisateur",
+    "add_participant": "Ajouter un participant",
+    "recurrence": "Récurrence",
+    "no_recurrence": "Ne se répète pas",
+    "daily": "Quotidien",
+    "weekly": "Hebdomadaire",
+    "monthly": "Mensuel",
+    "yearly": "Annuel",
+    "reminder": "Rappel",
+    "none": "Aucun",
+    "15_minutes": "15 minutes avant",
+    "30_minutes": "30 minutes avant",
+    "1_hour": "1 heure avant",
+    "1_day": "1 jour avant",
+    "private": "Privé",
+    "busy": "Marquer comme occupé",
+    "free": "Marquer comme libre"
   }
 }
